# starknet_in_rust

./: .cargo  .gitattributes  .gitignore  .rusty-hook.toml  .tarpaulin.toml  0.1.0.txt  0.4.1.txt  Cargo.toml  LICENSE  Makefile  README.md  Scarb.toml  a  a.txt  add-funds.sh  bench_integration.py  build.rs  expected.txt  generators.py  pyproject.toml  requirements.txt  result.txt  run_bench.sh  run_bench_deploy.sh  rust-toolchain  rust-toolchain.toml  starknet-devnet.md
.cargo/: config.toml
.github/: codecov.yml
Keccak_contract/: Scarb.toml
a/: SIR2
bench/: benches.rs  cairo_native.rs  hashing_running_time.rs  internals.rs  native_bench.rs  yas.rs
cairo_programs/: compiled_class.cairo  constants.cairo  fibonacci.cairo  fibonacci.json  get_block_hash_basic.cairo  new_syscalls.cairo  wallet.sierra
cairo_syscalls/: syscalls.json
cli/: Cargo.toml
cli/src/: main.rs
contract_execution_examples/: README.md  example_contract.cairo  execute_contract.rs  factorial.cairo
crates/cairo-1-hint-processor/: Cargo.toml
crates/cairo-1-hint-processor/src/: dict_manager.rs  hint_processor.rs  lib.rs
crates/starknet-contract-class/: Cargo.toml
crates/starknet-contract-class/src/: error.rs  lib.rs
crates/starknet-rs-py/: Cargo.toml
crates/starknet-rs-py/.cargo/: config
crates/starknet-rs-py/src/: cached_state.rs  lib.rs  starknet_state.rs  types.rs
crates/starknet-rs-py/src/types/: block_info.rs  call_info.rs  contract_class.rs  contract_entry_point.rs  execution_resources.rs  general_config.rs  mod.rs  ordered_event.rs  ordered_l2_to_l1_message.rs  starknet_message_to_l1.rs  transaction.rs  transaction_execution_info.rs
crates/starknet-rs-py/src/types/transactions/: declare.rs  deploy.rs  deploy_account.rs  invoke_function.rs  mod.rs
crates/starknet-rs-py/src/utils/: mod.rs  transaction_hash.rs
crates/starknet-syscall/: Cargo.toml
crates/starknet-syscall/src/: deprecated_syscall_request.rs  deprecated_syscall_response.rs  lib.rs  other_syscalls.rs  syscall_info.rs  syscall_request.rs  syscall_response.rs
crates/starknet-syscall/src/errors/: syscall_handler_errors.rs
crates/starknet-syscall/src/handler/: business_logic_syscall_handler.rs  deprecated_business_logic_syscall_handler.rs  deprecated_syscall_handler.rs  syscall_handler.rs
docs/: CLI_USAGE_EXAMPLE.md  devnet_testing.md  state_requirements_for_operation
examples/contract_execution/: Cargo.toml  README.md  execute_contract.rs  main.rs
examples/contract_execution/src/: main.rs
fuzzer/: Cargo.toml  README.md
fuzzer/src/: main.rs
replay/: Cargo.toml
replay/src/: main.rs
rpc_state_reader/: Cargo.toml  a.txt  t.txt
rpc_state_reader/src/: lib.rs  rpc_state.rs  rpc_state_errors.rs  sir_state_reader.rs  utils.rs
rpc_state_reader/tests/: blockifier_tests.rs  sir_tests.rs
rpc_state_reader_sn_api/: Cargo.toml
rpc_state_reader_sn_api/src/: lib.rs  utils.rs
rpc_state_reader_sn_api/test-responses/: starknet-mainnet-10526766806876888289.json  starknet-mainnet-10532631394052969557.json  starknet-mainnet-10605181140364136813.json  starknet-mainnet-10720429356097161340.json  starknet-mainnet-1072157450008212175.json  starknet-mainnet-10810377549209515082.json  starknet-mainnet-10818384169375449177.json  starknet-mainnet-10871286771362858097.json  starknet-mainnet-10920700174913740250.json  starknet-mainnet-10958906415993102919.json  starknet-mainnet-11036391004835378862.json  starknet-mainnet-11102393296554999140.json  starknet-mainnet-1133008948817821751.json  starknet-mainnet-11523062992140384635.json  starknet-mainnet-11593536464001118200.json  starknet-mainnet-11622392190348159213.json  starknet-mainnet-11878920176817726394.json  starknet-mainnet-12026463440357189741.json  starknet-mainnet-12130633356840407114.json  starknet-mainnet-1215377590725294221.json  starknet-mainnet-12408725947530653810.json  starknet-mainnet-12482153490623604223.json  starknet-mainnet-12587065910129295067.json  starknet-mainnet-12658858639273016314.json  starknet-mainnet-12689006594503700856.json  starknet-mainnet-12863447585720517058.json  starknet-mainnet-12886146457099955282.json  starknet-mainnet-13347278266184162481.json  starknet-mainnet-13497438183657737771.json  starknet-mainnet-13797240514044493841.json  starknet-mainnet-13897417706288052698.json  starknet-mainnet-14004104233935145189.json  starknet-mainnet-14027724689636271899.json  starknet-mainnet-14233845455838565457.json  starknet-mainnet-14276474233467918725.json  starknet-mainnet-14276634721783524923.json  starknet-mainnet-14376608475231361191.json  starknet-mainnet-14559938013632690597.json  starknet-mainnet-14609246415998344090.json  starknet-mainnet-15123811119043961905.json  (+122 more)
rpc_state_reader_sn_api/tests/: blockifier_tests.rs  sir_tests.rs
scripts/: add-funds.sh  bench-deploy-invoke.sh  bench-deploy.sh  bench-fib.sh  bench-fibonacci.sh  bench-invoke.sh  bench-yas.sh  heaptrack.sh  move-devnet-sir.patch  patch-devnet.sh
src/: errors.rs  hash_utils.rs  lib.rs  main.rs  parser_errors.rs  patricia_merkle_tree.rs  server.rs  utils.rs  utils_errors.rs
starknet-in-rs-venv/: pyvenv.cfg
starknet-rs-hint-codegen/: Cargo.toml
starknet-rs-hint-codegen/src/: main.rs
starknet_programs/: Account.cairo  AccountPreset.cairo  ERC165.cairo  ERC20.cairo  ERC721.cairo  account_without_validation.cairo  account_without_validation_and_expensive_constructor.cairo  amm.cairo  amm_proxy.cairo  constructor.cairo  delegate_call.cairo  delegate_l1_handler.cairo  deployer.cairo  factorial.cairo  fibonacci.cairo  first_contract.cairo  get_number.cairo  get_number_c.cairo  get_number_d.cairo  get_number_l1_handler.cairo  increase_balance.cairo  internal_calls.cairo  keccak_builtin.cairo  l1l2.cairo  program_without_attributes_2.json  rabbit.cairo  send_message_to_l1.cairo  send_messages_contract_call.cairo  starknet-libs-storage.cairo  storage.cairo  storage_var_and_constructor.cairo  syscalls.cairo  test_contract.cairo  test_sierra.json
tests/: account_panic.rs  amm.rs  amm_proxy.rs  cairo_1_syscalls.rs  cairo_native.rs  constructor.rs  delegate_call.rs  (+22 more)
(+373 files in other folders)
