[package]
name = "starknet-rs-cli"
version = "0.3.0"
edition = "2021"

[features]
default = ["with_mimalloc"]
with_mimalloc = ["dep:mimalloc"]

[dependencies]
starknet_in_rust = { path = "../", version = "0.3.0" }
num-traits = "0.2.15"
serde = { version = "1.0.152", features = ["derive"] }
cairo-vm = { workspace = true, features = ["cairo-1-hints"] }
clap = { version = "4.1.8", features = ["derive"] }
actix-web = "4.3.1"
awc = "3.1.1"
mimalloc = { version = "0.1.29", default-features = false, optional = true }

[dev-dependencies]
assert_matches = "1.5.0"
coverage-helper = "0.1.0"
