[package]
name = "fuzzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
honggfuzz = "0.5.55"
starknet_in_rust = { path = "../" }
num-traits = { workspace = true }
starknet_api = { workspace = true }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
tempfile = "3.2.0"
cairo-vm = { workspace=true, features = ["cairo-1-hints"]}
starknet-contract-class = { path = "../crates/starknet-contract-class/" }
