[package]
name = "fuzzer"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
honggfuzz = "0.5.55"
starknet_in_rust = { path = "../", version = "0.3.0" }
num-traits = { workspace = true }
starknet_api = { workspace = true }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
tempfile = "3.2.0"
cairo-vm = { workspace = true }
