[package]
name = "fuzzer"
version = "0.4.0"
edition = "2021"

[features]
cairo-native = ["starknet_in_rust/cairo-native"]

[dependencies]
honggfuzz = "0.5.55"
starknet_in_rust = { path = "../", version = "0.4.0" }
num-traits = { workspace = true }
starknet_api = { workspace = true }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
tempfile = "3.2.0"
cairo-vm = { workspace = true, features = ["cairo-1-hints"] }
