[package]
name = "replay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starknet_in_rust = { path = "../", version = "0.4.0" }
rpc_state_reader = { path = "../rpc_state_reader", features = ["starknet_in_rust"] }
clap = { version = "4.4.6", features = ["derive"] }
