[package]
name = "rpc_state_reader"
version = "0.4.0"
edition = "2021"

[features]
default = ["starknet_in_rust"]
starknet_in_rust = []
cairo-native = ["starknet_in_rust/cairo-native"]
blockifier = []

[dependencies]
ureq = { version = "2.7.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = [
    "arbitrary_precision",
    "raw_value",
] }
cairo-lang-starknet = { workspace = true }
cairo-lang-utils = { workspace = true }
starknet = { workspace = true }
thiserror = { workspace = true }
flate2 = "1.0.25"
serde_with = "3.0.0"
dotenv = "0.15.0"
cairo-vm = { workspace = true }
blockifier = { git = "https://github.com/starkware-libs/blockifier", rev = "v0.3.0-rc1" }
starknet_api_blockifier = { package = "starknet_api", git = "https://github.com/starkware-libs/starknet-api", rev = "8f620bc" }
starknet_api = { workspace = true }
starknet_in_rust = { path = "../", version = "0.4.0" }

[dev-dependencies]
pretty_assertions_sorted = "1.2.3"
test-case = "3.1.0"
