[package]
name = "rpc_state_reader"
version = "0.4.0"
edition = "2021"

[features]
default = ["starknet_in_rust"]
starknet_in_rust = []
cairo-native = ["starknet_in_rust/cairo-native"]

[dependencies]
cairo-vm = { workspace = true }
ureq = { version = "2.7.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = [
    "arbitrary_precision",
    "raw_value",
] }
starknet_api = { workspace = true }
cairo-lang-starknet = { workspace = true }
cairo-lang-utils = { workspace = true }
starknet = { workspace = true }
thiserror = { workspace = true }
flate2 = "1.0.25"
serde_with = "3.0.0"
dotenv = "0.15.0"
blockifier = { git = "https://github.com/starkware-libs/blockifier", rev = "256e2a6bb600963c26c43bf64c53f5b91985a290" }
starknet_in_rust = { path = "../", version = "0.4.0" }

[dev-dependencies]
pretty_assertions_sorted = "1.2.3"
test-case = "3.1.0"
