[package]
name = "rpc_state_reader"
version = "0.4.0"
edition = "2021"

[features]
default = ["starknet_in_rust"]
starknet_in_rust = []
cairo-native = ["starknet_in_rust/cairo-native"]

[dependencies]
ureq = { version = "2.7.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = [
    "arbitrary_precision",
    "raw_value",
] }
starknet_api = "0.11.0"
cairo-lang-starknet = { workspace = true }
cairo-lang-utils = { workspace = true }
starknet = { workspace = true }
thiserror = { workspace = true }
flate2 = "1.0.25"
serde_with = "3.0.0"
dotenv = "0.15.0"
cairo-vm = { workspace = true }
cairo-vm-blockifier = { package = "cairo-vm", version = "0.9.1" }
blockifier = "=0.5.0-dev.0"
starknet_in_rust = { path = "../", version = "0.4.0" }

[dev-dependencies]
pretty_assertions_sorted = "1.2.3"
test-case = "3.1.0"
