[package]
name = "rpc_state_reader_sn_api"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.7.1", features = ["json"] }
serde = { version = "=1.0.171", features = ["derive"] }
serde_json = { version = "1.0", features = [
    "arbitrary_precision",
    "raw_value",
] }
starknet_api = { git = "https://github.com/starkware-libs/starknet-api.git", rev = "dc83f050406b3e6796c384efdcc8a85a03069859" }
cairo-lang-starknet = { workspace = true }
starknet = { workspace = true }
thiserror = { workspace = true }
serde_with = "3.0.0"
dotenv = "0.15.0"
cairo-vm = "0.8.5"
