[package]
name = "cairo-1-hint-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
cairo-rs = { git="https://github.com/lambdaclass/cairo-rs/", rev = "327ee7d6778bdab9573573e6af008fcc6041f9ad", package = "cairo-vm" }
felt = { git="https://github.com/lambdaclass/cairo-rs/", rev = "327ee7d6778bdab9573573e6af008fcc6041f9ad", package = "cairo-felt" }
cairo-lang-casm = { git = "https://github.com/starkware-libs/cairo" }
cairo-lang-utils = "0.1.0"
num-integer = "0.1.45"
num-traits = "0.2.15"
thiserror = { version = "1.0.32" }
