[package]
name = "starknet-contract-class"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.156"
serde_json = "1.0.94"
cairo-vm = {workspace = true}

[dependencies.starknet_api]
git = "https://github.com/starkware-libs/starknet-api"
rev = "a891109ecc9c269e91b1afd2d44bc597728e1172"
features = ["testing"]
