[package]
name = "starknet-rs-py"
version = "0.1.0"
edition = "2021"

[lib]
name = "starknet_rs_py"
crate-type = ["cdylib"]
required-features = ["extension-module"]

[features]
default = ["extension-module"]
embedded-python = ["pyo3/auto-initialize"]
extension-module = ["pyo3/extension-module"]

[dependencies]
num-bigint = "0.4.3"
serde = "1.0.156"
serde_json = "1.0.94"

[dependencies.cairo-vm]
git = "https://github.com/lambdaclass/cairo-rs.git"
rev = "593d9a739fe3f1734c4d19d1dd037a5e3a734a57"

[dependencies.pyo3]
features = ["num-bigint"]
version = "0.18.2"

[dependencies.starknet-rs]
path = "../.."
