[package]
name = "contract_execution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-vm = { workspace = true }
starknet_in_rust = { path = "../../", version = "0.4.0" }
serde_json = { version = "1.0", features = [
    "arbitrary_precision",
    "raw_value",
] }

[[bin]]
name = "contract_execution"
path = "main.rs"
