[package]
name = "contract_execution"
version = "0.4.0"
edition = "2021"

[features]
cairo-native = ["starknet_in_rust/cairo-native"]

[dependencies]
cairo-vm = { workspace = true }
starknet_in_rust = { path = "../../", version = "0.4.0" }
serde_json = { version = "1.0", features = [
    "arbitrary_precision",
    "raw_value",
] }
